<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/name_0"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_marginTop="12dp"
                            android:layout_weight="1"
                            android:paddingLeft="30dp"
                            android:text="@string/name_0"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />


                        <ImageView
                            android:id="@+id/goods_0"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_column="2"
                            android:scaleType="fitCenter"
                            android:src="@drawable/goods_0" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/name_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_marginTop="12dp"
                            android:layout_weight="1"
                            android:paddingLeft="30dp"
                            android:text="@string/name_1"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/goods_1"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_column="2"
                            android:scaleType="fitCenter"
                            android:src="@drawable/goods_1" />


                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/name_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_marginTop="12dp"
                            android:layout_weight="1"
                            android:paddingLeft="30dp"
                            android:text="@string/name_2"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/goods_2"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_column="2"
                            android:scaleType="fitCenter"
                            android:src="@drawable/goods_2" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/name_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_marginTop="12dp"
                            android:layout_weight="1"
                            android:paddingLeft="30dp"
                            android:text="@string/name_3"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/goods_3"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_column="2"
                            android:scaleType="fitCenter"
                            android:src="@drawable/goods_3" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/name_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_marginTop="12dp"
                            android:layout_weight="1"
                            android:paddingLeft="30dp"
                            android:text="@string/name_4"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/goods_4"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_column="2"
                            android:scaleType="fitCenter"
                            android:src="@drawable/goods_4" />
                    </TableRow>


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                </TableLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/goods_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:background="@drawable/minibtn"
                android:text="@string/goods_register"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/goods_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:background="@drawable/minibtn"
                android:text="@string/goods_delete"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold" />


        </TableRow>

        <Button
            android:id="@+id/goods_memberInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@drawable/minibtn"
            android:text="@string/goods_info"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

    </TableLayout>

    </LinearLayout>

</LinearLayout>
